@@ -1,148 +1,130 @@
 package hr.ogcs.rextruderservice.service;
 
-import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
-import org.apache.poi.util.Units;
-import org.apache.poi.xwpf.usermodel.XWPFDocument;
-import org.apache.poi.xwpf.usermodel.XWPFParagraph;
-import org.apache.poi.xwpf.usermodel.XWPFPicture;
-import org.apache.poi.xwpf.usermodel.XWPFRun;
+import org.apache.commons.io.IOUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.*;
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
-import java.util.Collections;
-import java.util.List;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @Slf4j
 public class RScriptService {
-    String UPLOAD_DIR = new File(getClass().getClassLoader().getResource("files").getFile()).getAbsolutePath();
-    private final AtomicLong counter = new AtomicLong(0);
 
-    @Getter
-    public String outputFileName;
+    private final DocumentService documentService;
 
-    public byte[] uploadAndExecuteRScript(MultipartFile uploadedFile) throws IOException, InterruptedException, InvalidFormatException {
-        String scriptFileName = uploadRScript(uploadedFile);
+    private final RProcessor rProcessor;
 
-        executeRScriptAndRetrievePlot(scriptFileName);
+    @Value("${rscript.path}")
+    private String rScriptPath;
 
-        return generateWord();
+    @Value("${rscript.workingDir}")
+    private String workingDir = ".";
+
+    public RScriptService(DocumentService documentService, RProcessor rProcessor) {
+        this.documentService = documentService;
+        this.rProcessor = rProcessor;
     }
 
-    String uploadRScript(MultipartFile uploadedFile) throws IOException {
-        String fileName = counter.getAndIncrement() + "_" + uploadedFile.getOriginalFilename();
-        Path filePath = Paths.get(UPLOAD_DIR, fileName);
+    public byte[] createPlotFromRScript(MultipartFile uploadedFile) throws IOException, InterruptedException {
+        try {
+            Path scriptFilePath = saveRScript(uploadedFile);
+            byte[] plotBytes = executeRScriptAndRetrievePlot(scriptFilePath);
+            return documentService.generateWord(plotBytes);
+        } catch (IOException | InterruptedException e) {
+            log.error("IOException during R script execution: {}", e.getMessage());
+            throw e;
+        }
+    }
 
+    protected Path saveRScript(MultipartFile uploadedFile) throws IOException {
+        String originalFilename = uploadedFile.getOriginalFilename();
+        if (originalFilename == null || originalFilename.isEmpty()) {
+            throw new IllegalArgumentException("Original filename is null or empty.");
+        }
+        if (!originalFilename.toUpperCase().endsWith(".R")) {
+            throw new IllegalArgumentException("Invalid file type. Only .R files are allowed.");
+        }
+        Path uploadDirPath = Paths.get(workingDir);
+        Path filePath = uploadDirPath.resolve(originalFilename);
         uploadedFile.transferTo(filePath.toFile());
-
-        return fileName;
+        return filePath;
     }
 
-    byte[] executeRScriptAndRetrievePlot(String scriptFileName) throws IOException, InterruptedException {
-        outputFileName = scriptFileName.replace(".R", ".png");
+    protected byte[] executeRScriptAndRetrievePlot(Path scriptFilePath) throws IOException, InterruptedException {
+        Path outputFilePath = scriptFilePath.resolveSibling(
+                scriptFilePath.getFileName().toString().replace(".R", ".png"));
 
-        // Modify script to save the plot as a PNG
-        String modifiedScriptContent = modifyScriptContent(scriptFileName, outputFileName);
+        String modifiedScriptContent = modifyScriptContent(scriptFilePath, outputFilePath.getFileName().toString());
+        Path modifiedScriptPath = saveModifiedScript(modifiedScriptContent, scriptFilePath.getFileName().toString());
+        try {
+            executeRScript(modifiedScriptPath, outputFilePath);
 
-        // Save modified script as a temp file
-        Path modifiedScriptPath = saveModifiedScript(modifiedScriptContent);
+            Files.move(outputFilePath, scriptFilePath.resolveSibling(outputFilePath.getFileName()), StandardCopyOption.REPLACE_EXISTING);
 
-        // Execute script
-        executeRScript(modifiedScriptPath);
-
-        // Move plot to the same dir as script
-        Path destinationPath = Paths.get(UPLOAD_DIR, outputFileName);
-        Files.move(Paths.get(outputFileName), destinationPath, StandardCopyOption.REPLACE_EXISTING);
-
-        return Files.readAllBytes(destinationPath);
+            return Files.readAllBytes(scriptFilePath.resolveSibling(outputFilePath.getFileName()));
+        } catch (IOException | InterruptedException e) {
+            log.error("Error during R script execution: {}", e.getMessage());
+            throw e;
+        }
     }
 
-    String modifyScriptContent(String scriptFileName, String outputFileName) throws IOException {
-        String scriptContent = new String(Files.readAllBytes(Paths.get(UPLOAD_DIR, scriptFileName)), StandardCharsets.UTF_8);
+    /**
+     * Extends the original R script by code that enables the plotting of PNG files.
+     * @param scriptFilePath
+     * @param outputFileName
+     * @return
+     * @throws IOException
+     */
+    protected String modifyScriptContent(Path scriptFilePath, String outputFileName) throws IOException {
+        String scriptContent = Files.readString(scriptFilePath);
+
+        outputFileName = (outputFileName != null) ? outputFileName : "default_output";
 
         // Modify script to save the plot as a PNG
         if (scriptContent.contains("plot(")) {
-            scriptContent = scriptContent.replace("plot(", String.format("png('%s')\nplot(", outputFileName));
+            scriptContent = scriptContent.replace("plot(", String.format("png('%s')%splot(", outputFileName, System.lineSeparator()));
             scriptContent += "\ndev.off()";
         }
-
+        if (scriptContent.contains("KinReport(")) {
+            int index = scriptContent.indexOf("KinReport(");
+            String pngCommand = String.format("png('%s')%s", outputFileName, System.lineSeparator());
+            scriptContent = scriptContent.substring(0, index) + pngCommand + scriptContent.substring(index);
+        }
         return scriptContent;
     }
 
-    Path saveModifiedScript(String modifiedScriptContent) throws IOException {
-        Path modifiedScriptPath = Files.createTempFile("modified_script", ".R");
+    protected Path saveModifiedScript(String modifiedScriptContent, String scriptFileName) throws IOException {
+        Path modifiedScriptPath = Paths.get(workingDir, "modified_" + scriptFileName.replace(" ", "_"));
         Files.write(modifiedScriptPath, modifiedScriptContent.getBytes(), StandardOpenOption.CREATE);
         return modifiedScriptPath;
     }
 
-    void executeRScript(Path modifiedScriptPath) throws IOException, InterruptedException {
-        String rScriptPath = "C:\\Program Files\\R\\R-4.3.2\\bin\\Rscript.exe";
+    protected void executeRScript(Path modifiedScriptPath, Path outputFilePath) throws IOException, InterruptedException {
+        if (modifiedScriptPath == null || modifiedScriptPath.getFileName() == null) {
+            // Handle the null case, throw an exception, or log an error
+            throw new IllegalArgumentException("Invalid modifiedScriptPath");
+        }
+        String command = rScriptPath + " " + modifiedScriptPath.toAbsolutePath();
 
-        String command = rScriptPath + " " + modifiedScriptPath.toAbsolutePath().toString();
+        // The external R executable creates a PNG that is named like the script itself
+        Process process = rProcessor.execute(command, outputFilePath.getFileName().toString(), outputFilePath.getParent());
 
-        Process process = Runtime.getRuntime().exec(command);
+        String processOutput = IOUtils.toString(process.getInputStream(), String.valueOf(StandardCharsets.UTF_8));
+        String processError = IOUtils.toString(process.getErrorStream(), String.valueOf(StandardCharsets.UTF_8));
+
+        log.info("Process Output:\n{}", processOutput);
 
         int exitCode = process.waitFor();
-
         if (exitCode != 0) {
-            throw new RuntimeException("Failed to execute modified R script. Exit code: " + exitCode);
-        }
-
-        Files.deleteIfExists(modifiedScriptPath);
-    }
-    public byte[] generateWord() throws IOException, InvalidFormatException {
-        if (outputFileName == null) {
-            throw new IllegalStateException("Output file name is not set");
-        }
-
-        File imageFile = new File(UPLOAD_DIR, outputFileName);
-        InputStream imageInputStream = new FileInputStream(imageFile);
-
-        XWPFDocument document = new XWPFDocument();
-
-        XWPFParagraph paragraph = document.createParagraph();
-        XWPFRun run = paragraph.createRun();
-
-        // Add the PNG to the paragraph
-        int imageFormat = XWPFDocument.PICTURE_TYPE_PNG;
-        String imageId = document.addPictureData(imageInputStream, imageFormat);
-        int width = 360;
-        int height = 360;
-
-        XWPFPicture picture = run.addPicture(imageInputStream, imageFormat, "image.png", Units.toEMU(width), Units.toEMU(height));
-        picture.getCTPicture().getBlipFill().getBlip().setEmbed(imageId);
-
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        document.write(baos);
-
-        return baos.toByteArray();
-    }
-
-    public byte[] getRScriptContent(String fileName) throws IOException {
-        Path filePath = Paths.get(UPLOAD_DIR, fileName);
-
-        return Files.readAllBytes(filePath);
-    }
-
-    public List<String> getAllRScriptNames() {
-        try (Stream<Path> walk = Files.walk(Paths.get(UPLOAD_DIR))) {
-            // Filter only files with ".R" extension
-            return walk.filter(Files::isRegularFile)
-                    .map(Path::getFileName)
-                    .map(Path::toString)
-                    .filter(name -> name.endsWith(".R"))
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            log.error("Error getting all R script names", e);
-            return Collections.emptyList();
+            // Log process errors
+            log.error("Process Errors:\n{}", processError);
+            throw new IOException("Failed to execute modified R script. Exit code: " + exitCode);
         }
     }
+
 }
